# setup.cfg
[metadata]
name = flood-fill
version = 0.0.1
description = Flood fill algorithm
long_description = file: README.md
long_description_content_type = text/markdown
author = Josh Pooley
author_email = "Josh Pooley" <joshpooley93@gmail.com>
license = MIT

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3
install_requires = 


[options.packages.find]
where = src
exclude =
    test*
